fixing logo alignment

--- a/static/style.css
+++ b/static/style.css
@@ -64,7 +64,7 @@ div#header {
   max-width: 420px;
   margin-top: -100px;
   padding-top: 25px;
-  margin-left: -10px;
+  margin-left: -12px;
   padding-left: 10px;
   padding-right: 1024px;
   margin-right: -10px;
@@ -182,12 +182,11 @@ input {
 
 /* Logo stuff */
 div#tt_logo {
-  width: 120px;
   color: gray;
   margin-top: 8px;
   margin-bottom: 10px;
-  margin-left: 240px;
-  align-self: right;
+  margin-right: 35px;
+  text-align: right;
 }
 #logoslash {
   stroke: gray;
